--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,7 @@ include:
     shield: corne_tp_left
   - board: nice_nano_v2
     shield: corne_tp_right
-  - board: seeeduino_xiao
+  - board: seeeduino_xiao_ble
     shield: xiao_tp_test
 
   # Alternative PINs firmware
