--- a/boards/shields/xiao_tp_test/xiao_tp_test.conf
+++ b/boards/shields/xiao_tp_test/xiao_tp_test.conf
@@ -3,9 +3,9 @@
 # マウス機能を有効化
 CONFIG_ZMK_MOUSE=y
 
-# PS/2ドライバを有効化
-CONFIG_ZMK_MOUSE_PS2=y
-CONFIG_ZMK_MOUSE_PS2_DRIVER_UART=y
+# PS/2ドライバ設定（変数名に _INPUT_ が入ります）
+CONFIG_ZMK_INPUT_MOUSE_PS2=y
+CONFIG_ZMK_INPUT_MOUSE_PS2_DRIVER_UART=y
 
-# ログ出力を有効にしてデバッグしやすくする（USB接続時）
+# ログ出力（デバッグ用）
 CONFIG_ZMK_USB_LOGGING=y
