--- a/boards/shields/xiao_tp_test/xiao_tp_test.conf
+++ b/boards/shields/xiao_tp_test/xiao_tp_test.conf
@@ -1,4 +1,8 @@
-# xiao_tp_test.conf
+# マウス機能を有効化
 CONFIG_ZMK_MOUSE=y
+
+# ドライバの選択（これを書くと自動的にPS/2機能もONになります）
 CONFIG_ZMK_INPUT_MOUSE_PS2_DRIVER_UART=y
+
+# ログ設定
 CONFIG_ZMK_USB_LOGGING=y
