--- a/boards/shields/xiao_tp_test/xiao_tp_test.conf
+++ b/boards/shields/xiao_tp_test/xiao_tp_test.conf
@@ -1,2 +1,7 @@
 CONFIG_ZMK_MOUSE=y
+# ↓ この1行を追加してください
+CONFIG_ZMK_INPUT_MOUSE_PS2_UART=y
+
 CONFIG_ZMK_USB_LOGGING=y
+# ログを見逃さないように起動時の待機時間を少し延ばします
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=2000
